--- a/intex.html
+++ b/intex.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Hello, World!</h1>
   <p>This is a simple test file.</p>
+  <p>This is my second commit for the second day.</p<
 </body>
 </html>
 
