--- a/index.html
+++ b/index.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Test Page</title>
+  <title>My Cool Site</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(135deg, #6e8efb, #a777e3);
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 2rem;
+    }
+    .card {
+      background: white;
+      border-radius: 8px;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <p>This is a simple test file.</p>
-  <p>This is my second commit for the second day.</p>
+  <header>
+    <h1>Welcome to My Website</h1>
+    <p>Just a simple site with some random thoughts</p>
+  </header>
+  
+  <div class="container">
+    <div class="card">
+      <h2>About This Site</h2>
+      <p>Blq blq blq. This is a random site with random text. Random random random..</p>
+      <p>Sometimes the simplest designs are the most effective, don't you think?</p>
+    </div>
+    
+    <div class="card">
+      <h2>Random Thoughts</h2>
+      <p>Did you know that honey never spoils? Archaeologists have found pots of honey in ancient Egyptian tombs that are over 3,000 years old and still perfectly good to eat.</p>
+      <p>The shortest war in history was between Britain and Zanzibar on August 27, 1896. Zanzibar surrendered after 38 minutes.</p>
+    </div>
+    
+    <div class="card">
+      <h2>Things I Might Add Later</h2>
+      <ul>
+        <li>A proper navigation menu</li>
+        <li>Some interesting project showcases</li>
+        <li>Maybe a blog section</li>
+        <li>Contact form or social media links</li>
+	<li>Or maybe I wont add anything else</li>
+      </ul>
+    </div>
+  </div>
+  
+  <footer>
+    &copy; 2025 My Cool Website | Just a simple demo page
+  </footer>
 </body>
 </html>
-
