added a paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>My Cool Site</title>
+  <title>My Very Cool Site</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,10 +51,11 @@
       <p>Sometimes the simplest designs are the most effective, don't you think?</p>
     </div>
     
-    <div class="card">
-      <h2>Random Thoughts</h2>
-      <p>Did you know that honey never spoils? Archaeologists have found pots of honey in ancient Egyptian tombs that are over 3,000 years old and still perfectly good to eat.</p>
-      <p>The shortest war in history was between Britain and Zanzibar on August 27, 1896. Zanzibar surrendered after 38 minutes.</p>
+    <div class="card">	
+	<h2>Random Thoughts</h2>
+	<p>Did you know that honey never spoils? Archaeologists have found pots of honey in ancient Egyptian tombs that are over 3,000 years old and still perfectly good to eat.</p>
+	<p>The shortest war in history was between Britain and Zanzibar on August 27, 1896. Zanzibar surrendered after 38 minutes.</p>
+	<p>Octopuses have three hearts, and two of them stop beating when they swim.</p>
     </div>
     
     <div class="card">
