added a paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <h2>About This Site</h2>
       <p>Blq blq blq. This is a random site with random text. Random random random..</p>
       <p>Sometimes the simplest designs are the most effective, don't you think?</p>
+	<p>I raelly do think so</p?
     </div>
     
     <div class="card">	
